--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 <body>
     <main>
         <header>
-            <div class="logo"></div>
-            <h1>Pizza Comparing</h1>
+            <div class="header-shadow">
+                <div class="container">
+                    <!-- <div class="logo"></div> -->
+                    <h1>Pizza Comparing</h1>
+                </div>
+                
+            </div>
         </header>
         <section>
             <div class="shadow">
